tests/snapshots/test_runner__tests__compiler__typecheck__type_inference_infinite_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let x: Int =
  let f = { \x -> x x };
  123

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_inference_infinite_type_1.kk:2:19
  │
2 │   let f = { \x -> x x };
  │                   ^^^ Infinite type
  │
  = Infinite type expansion will happen when substituting `@TVAR2` into:

      @TVAR2 -> @TVAR3
